# aspire

./: .gitignore  README.md  pyproject.toml  readthedocs.yml
.github/: copilot-instructions.md
.github/workflows/: examples.yml  lint.yml  publish.yml  tests.yml
docs/: api.rst  checkpointing.rst  conf.py  index.rst  installation.rst  requirements.txt  user_guide.rst
examples/: basic_example.py  blackjax_smc_example.py  smc_example.py
src/aspire/: __init__.py  aspire.py  history.py  plot.py  proposals.py  samples.py  transforms.py  utils.py
src/aspire/flows/: __init__.py  base.py
src/aspire/flows/jax/: flows.py
src/aspire/flows/torch/: flows.py
src/aspire/samplers/: base.py  importance.py  mcmc.py
src/aspire/samplers/smc/: base.py  blackjax.py  emcee.py  minipcn.py
src/poppy/: __init__.py  backend.py  history.py  plot.py  poppy.py  samples.py  transforms.py  utils.py
src/poppy/flows/: __init__.py  base.py
src/poppy/samplers/: base.py  importance.py  mcmc.py  smc.py
src/poppy/samples/: __init__.py  base.py  jax.py  numpy.py  torch.py
src/poppy/transforms/: base.py  torch.py  utils.py
tests/: conftest.py  test_history.py  test_plot.py  test_samples.py  test_transforms.py  test_utils.py
tests/integration_tests/: conftest.py  test_checkpointing.py  test_integration.py
tests/test_flows/: test_flows_core.py
tests/test_flows/test_jax_flows/: test_flowjax_flows.py
tests/test_flows/test_torch_flows/: test_zuko_flows.py
tests/test_samplers/test_mcmc/: test_checkpointing.py  test_mcmc.py
tests/test_samplers/test_smc/: test_base.py
(+7 files in other folders)
